requestAuthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: bookinfo-request-auth
spec:
  selector:
    matchLabels:
      app: productpage
  jwtRules:
  - issuer: "http://a3c77c739f6304fb9ad39e1c7f11cf9f-43550991.eu-central-1.elb.amazonaws.com/realms/Istio"
    jwksUri: "http://keycloak.default.svc.cluster.local/realms/Istio/protocol/openid-connect/certs"
